--- a/index.html
+++ b/index.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>HTML/CSS Wireframe Exercise </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML/CSS Wireframe Exercise</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><img src="https://place-hold.it/200x70/ddd/black&text=Logo&bold&fontsize=12" /></li>
-                <li>Nav Item 1</li>
-                <li>Nav Item 2</li>
-                <li>Nav Item 3</li>
-                <li>Nav Item 4</li>
-            </ul>
-        </nav>
-    </header>
-<main>
+  
+  <header>
+    <nav>
+      <img src="https://place-hold.it/200x70/grey/black">
+      <ul>
+        <li> <a href="#">Nav Item 1</a></li>
+        <li> <a href="#">Nav Item 2</a></li>
+        <li> <a href="#">Nav Item 3</a></li>
+        <li> <a href="#">Nav Item 4</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <img src="https://place-hold.it/960x450/grey/black">
+
+    <ul>
+      <li><img src="https://place-hold.it/300x375/grey/black"></li>
+      <li><img src="https://place-hold.it/300x375/grey/black"></li>
+      <li><img src="https://place-hold.it/300x375/grey/black"></li>
+    </ul>
+
+    <article>
+      <img src="https://place-hold.it/480x400/grey/black">
+      <section>
+        <h1>Featured Section Heading</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        
+      </section>
+    </article>
+  </main>
+ 
+  <footer></footer>
+
+</body>
+</html>
    
